der tag der bei bildern eingefügt wird, ist nun über $cfg["contented"]["image_tag"] in der contented.cfg.php einstellbar
es werden dann die unter $cfg["contented"]["tags"]["img/imgb"] gemachten
einstellungen verwendet.

die dateien function_filelist.inc.php und -141347382.modify.js-nextgen.tem.html
wurden angepasst. ein default "img" in function_filelist.inc.php sorgt fuer
kompatibilitaet.

ein deprecated hinweis in der overwrite.cfg.php-dist weisst aus die neue
moeglichkeit hin.

--- a/trunk/basement/templates/default/-141347382.modify.js-nextgen.tem.html
+++ b/trunk/basement/templates/default/-141347382.modify.js-nextgen.tem.html
@@ -317,10 +317,13 @@ Das einfügen von Tags funktioniert ohne Javascript nicht. Bitte aktivieren Sie J
         }
         var myValue = prompt('URL:', defaultLink);
         if (myValue) {
-            myValue = '[IMG'
+            myValue = '['
+                    + i
                     + myValue
                     + ']' + prompt('Titel:', defaultTitle)
-                    + '[/IMG' + defaultEnd + ']';
+                    + '[/'
+                    + i
+                    + defaultEnd + ']';
             ebInsertContent(myField, myValue);
         }
 
