--- a/trunk/basement/templates/default/autoform.tem.html
+++ b/trunk/basement/templates/default/autoform.tem.html
@@ -14,6 +14,18 @@
     <p>#(inhalt)</p>
     <p>!#ausgaben_form_error</p>
 
+    <!--##hide-confirm_yes-->
+    <p>
+        #(confirm_yes)
+    </p>
+    <!--##show-->
+
+    <!--##hide-confirm_no-->
+    <p>
+        #(confirm_no)
+    </p>
+    <!--##show-->
+
     <!--##hide-success-->
     <p>
         #(success)
