erweitertes zip_handling: bug beseitigt wenn bilder in unterordnern und leerzeichen enthalten

--- a/trunk/basement/css/default/eed.css
+++ b/trunk/basement/css/default/eed.css
@@ -369,6 +369,10 @@ li.thumbs a.pic {
         -moz-border-radius: 5px;
 }
 
+#cEd li.files a {
+    cursor:pointer;
+}
+
 
 #cEd fieldset.ce {
     border: none;
