--- a/trunk/basement/templates/default/210295197.details.tem.html
+++ b/trunk/basement/templates/default/210295197.details.tem.html
@@ -18,8 +18,15 @@
 <p>!#ausgaben_forename</p>
 <h2>#(email)</h2>
 <p>!#ausgaben_email</p>
+<!--##hide-old_rights-->
 <h2>#(level)</h2>
 <p>!#ausgaben_level</p>
+<!--##show-->
+<!--##hide-new_rights-->
+<h2>#(group)</h2>
+<p>!#ausgaben_group</p>
+<!--##show-->
+
 <p>
     <a href="!#ausgaben_back"><img height="18" width="24" src="../../images/default/left.png" alt="g(back)" title="g(back)" /></a>
     <a href="!#ausgaben_edit"><img height="18" width="24" src="../../images/default/edit.png" alt="g(edit)" title="g(edit)" /></a>
