--- a/trunk/basement/templates/default/sitemap.tem.html
+++ b/trunk/basement/templates/default/sitemap.tem.html
@@ -11,7 +11,7 @@
 <!--$Id: -555504947.list.tem.html 789 2007-09-14 12:14:02Z chaot $-->
 <h1>#(ueberschrift)</h1>
 <div id="eEd">
-    !#ausgaben_output
+    !#ausgaben_sitemap
 </div>
 <!--##end-->
 </body>
