--- a/trunk/basement/templates/default/807284226.modify.tem.html
+++ b/trunk/basement/templates/default/807284226.modify.tem.html
@@ -40,14 +40,14 @@ return false;
 
     <!--##loop-infos-->
     <div class="clearer"></div>
-    <div style="border:1px solid;margin-left:10px">
-    !{url} !{info}
-    <div class="clearer"></div>
-    </div>
+    <fieldset style="padding:0 5px;border:1px solid;margin: 10px">
+        <legend style="margin: 0 10px;padding: 0 10px"> !{url}</legend>
+         !{info}
+    </fieldset>
     <!--##cont-->
 
     <fieldset>
-        <input type="button" name="abort" value="g(abort)" onclick="location='!#ausgaben_form_break'" class="first" />
+        <input type="button" name="abort" value="zur&uuml;ck zum Men&uuml;-Editor" onclick="location='!#ausgaben_form_break'"  />
         <div class="clearer"></div>
     </fieldset>
 
